# bazel-ktor

./: .gitignore  README.md  WORKSPACE.bazel
src/main/kotlin/com/example/: Application.kt  BUILD.bazel
