load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

RULES_KOTLIN_VERSION = "1.6.0"

RULES_KOTLIN_SHA = "a57591404423a52bd6b18ebba7979e8cd2243534736c5c94d35c89718ea38f94"

KTOR_VERSION = "2.0.3"

LOGBACK_VERSION = "1.2.11"

##### Maven #####
http_archive(
    name = "rules_jvm_external",
    sha256 = "cd1a77b7b02e8e008439ca76fd34f5b07aecb8c752961f9640dea15e9e5ba1ca",
    strip_prefix = "rules_jvm_external-4.2",
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/4.2.zip",
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

##### Bazel Rules #####
# rules_kotlin
# https://github.com/bazelbuild/rules_kotlin#quick-guide

http_archive(
    name = "io_bazel_rules_kotlin",
    sha256 = RULES_KOTLIN_SHA,
    urls = ["https://github.com/bazelbuild/rules_kotlin/releases/download/v%s/rules_kotlin_release.tgz" % RULES_KOTLIN_VERSION],
)

load(
    "@io_bazel_rules_kotlin//kotlin:repositories.bzl",
    "kotlin_repositories",
)

kotlin_repositories()  # if you want the default. Otherwise see custom kotlinc distribution below

load(
    "@io_bazel_rules_kotlin//kotlin:core.bzl",
    "kt_register_toolchains",
)

kt_register_toolchains()  # to use the default toolchain, otherwise see toolchains below

# ktor
# https://ktor.io/
IO_KTOR_ARTIFACTS = [
    "io.ktor:ktor-server:%s" % KTOR_VERSION,
    "io.ktor:ktor-server-core:%s" % KTOR_VERSION,
    "io.ktor:ktor-server-netty:%s" % KTOR_VERSION,
    "io.ktor:ktor-server-content-negotiation:%s" % KTOR_VERSION,
    "io.ktor:ktor-serialization-kotlinx-json:%s" % KTOR_VERSION,
]

LOGGER_ARTIFACTS = [
    # https://logback.qos.ch/
    # https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
    "ch.qos.logback:logback-classic:%s" % LOGBACK_VERSION,
]

maven_install(
    artifacts = [] +
                IO_KTOR_ARTIFACTS +
                LOGGER_ARTIFACTS,
    fetch_sources = True,
    generate_compat_repositories = True,
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
)

load("@maven//:compat.bzl", "compat_repositories")

compat_repositories()
